# YADRO_test_task

./: README.md
Task_1/: CMakeLists.txt  README.md
Task_1/include/: AWGNChannel.hpp  QAM.hpp  QAMModulator.hpp
Task_1/plot/: plot.py
Task_1/src/: AWGNChannel.cpp  QAMDemodulator.cpp  QAMModulator.cpp
Task_1/tests/: task_4_test.cpp  test_QAM16.cpp  test_QAM64.cpp  test_QPSK.cpp
include/: AWGNChannel.hpp
src/: QAMModulator.cpp
